# CyberCarDash-

./: CyberCarDashPro.spec  LICENSE  README.md  cybercardash.spec  install_vc_redist.ps1  pyproject.toml  requirements.txt  run.py
app/: main.py
app/core/: algo_sdk.py  dispatcher.py  logger.py  parameters.py  plugin_manager.py  protocol.py  serial_interface.py
app/plugins/: fusion_guard.py
app/ui/: dashboard.py  main_window.py  oscilloscope.py  params_widget.py
docs/: assumptions_cn.md
firmware_ref/: protocol.c  protocol.h
scripts/: build_exe.bat  setup_venv.bat  setup_venv.ps1
